--- a/index.html
+++ b/index.html
@@ -4,59 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Flash Browser</title>
-  <style>
-    body {
-      margin: 0; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: #f0f2f5;
-      height: 100vh; display: flex; flex-direction: column;
-    }
-    header {
-      background: #0078d7; color: white;
-      padding: 10px 15px; display: flex; align-items: center;
-    }
-    h1 {
-      margin: 0; font-size: 1.5rem; flex: 1;
-    }
-    #newTabBtn {
-      background: #005a9e; color: white; border: none;
-      padding: 6px 10px; border-radius: 4px; cursor: pointer;
-    }
-    #tabs {
-      display: flex; background: #e0e0e0; overflow-x: auto;
-    }
-    .tab-btn {
-      padding: 6px 12px; border: none; background: #ddd;
-      cursor: pointer; margin-right: 5px; border-radius: 4px 4px 0 0;
-    }
-    .tab-btn.active {
-      background: #fff; font-weight: bold;
-    }
-    #tabContainer {
-      flex: 1; position: relative;
-    }
-    .tab-content {
-      display: none; flex-direction: column;
-      height: 100%; position: absolute; top: 0; left: 0; right: 0; bottom: 0;
-    }
-    .tab-content.active {
-      display: flex;
-    }
-    .tab-toolbar {
-      display: flex; padding: 5px; background: #f8f8f8;
-    }
-    .tab-toolbar input {
-      flex: 1; padding: 6px; margin-right: 5px; border-radius: 4px; border: 1px solid #ccc;
-    }
-    .tab-toolbar button {
-      padding: 6px 10px; margin-left: 5px;
-    }
-    .tab-iframe {
-      flex: 1; border: none;
-    }
-    footer {
-      text-align: center; background: #0078d7; color: white; padding: 8px;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css" />
   <script src="https://js.puter.com/v2/"></script>
 </head>
 <body>
@@ -70,159 +18,6 @@
 
   <footer>Developed by Haris</footer>
 
-  <script>
-    let tabCount = 0;
-    let currentTabId = null;
-
-    function normalizeUrl(inputUrl) {
-      inputUrl = inputUrl.trim();
-      if (!inputUrl) return null;
-      if (/^(https?:\/\/)/i.test(inputUrl)) return inputUrl;
-      if (/^www\./i.test(inputUrl)) return 'https://' + inputUrl;
-      if (/^[\w-]+\.[a-z]{2,}$/i.test(inputUrl)) return 'https://www.' + inputUrl;
-      return 'https://' + inputUrl;
-    }
-
-    function createTab(url = '') {
-      tabCount++;
-      const tabId = `tab${tabCount}`;
-
-      // Create tab button
-      const tabButton = document.createElement('button');
-      tabButton.className = 'tab-btn';
-      tabButton.id = `${tabId}-btn`;
-      tabButton.textContent = `Tab ${tabCount}`;
-      tabButton.onclick = () => activateTab(tabId);
-      document.getElementById('tabs').appendChild(tabButton);
-
-      // Create tab content
-      const tabContent = document.createElement('div');
-      tabContent.className = 'tab-content';
-      tabContent.id = tabId;
-
-      // Toolbar
-      const toolbar = document.createElement('div');
-      toolbar.className = 'tab-toolbar';
-
-      const input = document.createElement('input');
-      input.placeholder = 'Enter URL, e.g. google.com';
-      input.onkeydown = e => {
-        if (e.key === 'Enter') loadInTab(tabId, input.value);
-      };
-
-      const goBtn = document.createElement('button');
-      goBtn.textContent = 'Go';
-      goBtn.onclick = () => loadInTab(tabId, input.value);
-
-      const closeBtn = document.createElement('button');
-      closeBtn.textContent = '❌';
-      closeBtn.onclick = () => closeTab(tabId);
-
-      toolbar.append(input, goBtn, closeBtn);
-
-      // iFrame
-      const iframe = document.createElement('iframe');
-      iframe.className = 'tab-iframe';
-
-      tabContent.append(toolbar, iframe);
-      document.getElementById('tabContainer').appendChild(tabContent);
-
-      activateTab(tabId);
-
-      if (url) {
-        input.value = url;
-        loadInTab(tabId, url);
-      }
-    }
-
-    function activateTab(tabId) {
-      document.querySelectorAll('.tab-btn').forEach(btn => btn.classList.remove('active'));
-      document.querySelectorAll('.tab-content').forEach(tab => tab.classList.remove('active'));
-      const button = document.getElementById(`${tabId}-btn`);
-      const content = document.getElementById(tabId);
-      if (button && content) {
-        button.classList.add('active');
-        content.classList.add('active');
-        currentTabId = tabId;
-      }
-    }
-
-    function closeTab(tabId) {
-      const btn = document.getElementById(`${tabId}-btn`);
-      const tab = document.getElementById(tabId);
-      if (btn) btn.remove();
-      if (tab) tab.remove();
-      if (currentTabId === tabId) {
-        const remaining = document.querySelectorAll('.tab-btn');
-        if (remaining.length > 0) remaining[0].click();
-        else currentTabId = null;
-      }
-    }
-
-    async function loadInTab(tabId, urlInput) {
-      const normalized = normalizeUrl(urlInput);
-      if (!normalized) return;
-
-      const iframe = document.querySelector(`#${tabId} iframe`);
-      const input = document.querySelector(`#${tabId} input`);
-
-      input.disabled = true;
-      iframe.srcdoc = `<p style="padding:20px;">Loading <span style="font-size:20px;">⏳</span>...</p>`;
-
-      try {
-        const response = await puter.net.fetch(normalized);
-        const body = await response.text();
-        const finalHTML = injectLinkHandler(body, normalized);
-        iframe.srcdoc = finalHTML;
-        input.value = normalized;
-      } catch (err) {
-        iframe.srcdoc = `<p style="padding:20px;color:red;">Error loading page: ${err.message}</p>`;
-      } finally {
-        input.disabled = false;
-      }
-    }
-
-    function injectLinkHandler(html, baseUrl) {
-      const parser = new DOMParser();
-      const doc = parser.parseFromString(html, 'text/html');
-      let base = doc.querySelector('base');
-      if (!base) {
-        base = document.createElement('base');
-        base.href = baseUrl;
-        doc.head.prepend(base);
-      } else {
-        base.href = baseUrl;
-      }
-
-      const script = document.createElement('script');
-      script.textContent = `
-        document.addEventListener('click', function(event) {
-          const link = event.target.closest('a');
-          if (link && link.href) {
-            event.preventDefault();
-            parent.postMessage({ type: 'navigate', url: link.href, tabId: '${currentTabId}' }, '*');
-          }
-        }, true);
-      `;
-      doc.head.appendChild(script);
-
-      return '<!DOCTYPE html>\n' + doc.documentElement.outerHTML;
-    }
-
-    window.addEventListener('message', e => {
-      if (e.data && e.data.type === 'navigate') {
-        const tabId = e.data.tabId;
-        const url = normalizeUrl(e.data.url);
-        if (tabId && url) {
-          loadInTab(tabId, url);
-        }
-      }
-    });
-
-    document.getElementById('newTabBtn').onclick = () => createTab();
-
-    // Open first tab by default
-    createTab();
-  </script>
+  <script src="script.js"></script>
 </body>
 </html>
