--- a/index.html
+++ b/index.html
@@ -422,6 +422,7 @@
             <option value="https://www.google.com/search?q=">Google</option>
             <option value="https://duckduckgo.com/?q=">DuckDuckGo</option>
             <option value="https://www.bing.com/search?q=">Bing</option>
+            
           </select>
         </div>
         <div class="setting-item">
@@ -489,8 +490,8 @@
     const SEARCH_ENGINE_KEY = 'flashBrowserSearchEngine';
     const HOMEPAGE_KEY = 'flashBrowserHomepage';
 
-    const DEFAULT_NEW_TAB_URL = "https://www.google.com"; // Fallback if no homepage is set by user
-    const DEFAULT_SEARCH_ENGINE_URL = 'https://www.google.com/search?q=';
+    const DEFAULT_NEW_TAB_URL = "https://www.bing.com"; // Fallback if no homepage is set by user
+    const DEFAULT_SEARCH_ENGINE_URL = 'https://www.bing.com/search?q=';
 
     let currentTheme = 'light';
     let currentSearchEngineUrl = DEFAULT_SEARCH_ENGINE_URL;
